
Mon 12 Apr 2004 13:12:06 GMT Jim Segrave <jes@jes-2.demon.nl>

	* set.c - put if (fX) wrapper around SetToolbarStyle, stops
	  GTK complaints in text mode

Sun Apr 11 22:52:49 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gtkprefs.c (SetTitle): move misplaced pbdeSelected.
	(contributed by Petr Kadlec)
	* gnubg.c (real_main): no env. variable DISPLAY on wintendo.
	(contributed by Petr Kadlec)

Sun Apr 11 19:20:52 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	Various patches from Mike Petch.

	* gnubg.c (real_main): avoid segfaults with gnubg -t
	* sound.c (SoundWait): do nothing if sound is disabled.
	* sound.c: only include stropts.h when HAVE_STROPTS_H
	* openurl.c, import.c: include glib.h
	* Makefile.am: move openurl.c to common files (it's now
	being used by CommandShowManualWeb)
	* configure.in: various checks for Mac.
	* set.c (CommandSetGUIShowEPCs): define a NO_GUI variant of function

Thu Apr  8 16:03:09 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	Show EPCs in GUI.  (suggested by Ian Shaw)

	* gtkboard.c (update_pipcount): show EPCs
	* gnubg.c: new command "set gui showepcs on|off"
	* set.c (CommandSetGUIShowEPCs): new sub.
	* gnubg.c (EPC): new parameter fOnlyRace
	* gtkoptions.c: gui control for setting fGUIShowEPCs

Wed Apr  7 10:46:00 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* configure.in, sound.c, config.h.in: check for _af_ulaw2linear

Mon Apr  5 08:24:52 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am: add gnubg.sql to DATA
	* gnubg.sql, scripts/database.py: rename stat to matchstat, and change
	some PKs/FKs
	* gnubg.c (CommandLoadPython): use PathSearch.

Sun Apr  4 15:50:55 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	First implementation of gnubg-rel.database interface.

	* gnubg.sql: DDLs for gnubg database.
	* scripts/database.py: python script for adding match to database.

Sun Apr  4 15:11:10 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c (PyGameStats): add missing statistics.