@@ -18,7 +18,7 @@
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
-* $Id: misc3d.c,v 1.31 2004/04/01 09:16:13 Superfly_Jon Exp $
+* $Id: misc3d.c,v 1.32 2004/04/14 16:52:25 jsegrave Exp $
 */
 
 #include "config.h"
@@ -253,6 +253,9 @@ GList *GetTextureList(int type)
 void FindNamedTexture(TextureInfo** textureInfo, char* name)
 {
 	list *pl;
+	if (textures.plNext == 0)
+	  return;
+
 	for (pl = textures.plNext; pl->p; pl = pl->plNext)
 	{
 		TextureInfo* text = (TextureInfo*)pl->p;
@@ -270,8 +273,12 @@ void FindNamedTexture(TextureInfo** textureInfo, char* name)
 
 void FindTexture(TextureInfo** textureInfo, char* file)
 {
-	list *pl;
-	for (pl = textures.plNext; pl->p; pl = pl->plNext)
+  list *pl = textures.plNext;
+	
+  if (pl == 0)
+    return;
+
+	for ( ; pl->p; pl = pl->plNext)
 	{
 		TextureInfo* text = (TextureInfo*)pl->p;
 		if (!strcasecmp(text->file, file))
